fix #388. preserve linebreak on pullReq commitMsg

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2737,12 +2737,18 @@
 
                 }
                 .comment-body {
-                  font-size: 12px;
-		          a { font-weight:bold; border-bottom:1px dotted; }
-                  padding:0 15px;
+                    font-size: 12px;
+                    padding:0 15px;
+                    a { font-weight:bold; border-bottom:1px dotted; }
+                    
+                    .commitMsg {
+                        white-space:pre-line;
+                        padding:5px; 
+                        background:#f7f7f7;
+                        border:1px solid #eee;
+                        .border-radius(2px);
+                    }
                 }
-
-
             }
             .attach-preview-wrap {
                 margin-top: 10px;
